Change new Integer to Integer.valueOf()